--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -559,6 +559,7 @@ nav:
                   - Notification Manager: services/omvs/notification-manager/overview.md
                   - Project Manager: services/omvs/project-manager/overview.md
                   - Reference Data: services/omvs/reference-data/overview.md
+                  - Runtime Manager: services/omvs/runtime-manager/overview.md
                   - Template Manager: services/omvs/template-manager/overview.md
                   - Valid Metadata: services/omvs/valid-metadata/overview.md
       - Frameworks:
