Move 5.1 to the current release
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -298,6 +298,7 @@ nav:
   - Releases:
       - Overview: release-notes/overview.md
       - Newsletters:
+            - October 2024: release-notes/october-2024.md
             - June 2024: release-notes/june-2024.md
             - August 2023: release-notes/august-2023.md
             - April 2023: release-notes/april-2023.md
