--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -210,7 +210,7 @@ nav:
       - User Interfaces:
           - User Interface overview: user-interfaces/index.md
           - Python Widgets: user-interfaces/python-widgets/overview.md
-          - Mermaid Diagrams: user-interfaces/mermaid/overview.md
+          - Graph Visualization: user-interfaces/mermaid/overview.md
           - Explorers: user-interfaces/brain-explorers/overview.md
       - Features:
           - Features Overview: features/index.md
@@ -694,7 +694,6 @@ nav:
       - Favorite Collections: concepts/favorite-things-collection.md
       - Feedback: concepts/feedback.md
       - File Type: concepts/file-type.md
-      - Glossary Term: practices/common-data-definitions/anatomy-of-a-glossary.md
       - GUID: concepts/guid.md
       - Governance Action: concepts/governance-action.md
       - Governance Action Engine: concepts/governance-action-engine.md
