--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -929,7 +929,7 @@ markdown_extensions:
          - name: mermaid
            class: mermaid
            #format: !!python/name:pymdownx.superfences.fence_code_format
-           format: !!python/name:mermaid2: fence_mermaid_custom
+           format: !!python/name:mermaid2.fence_mermaid_custom
   - pymdownx.keys
   - toc:
       permalink: true
