Another mermaid format
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -909,10 +909,6 @@ extra:
       link: https://slack.lfaidata.foundation
       name: Egeria on Slack
 
-plugins:
-  - search
-  - mermaid2
-
 markdown_extensions:
   - admonition
   - attr_list
@@ -928,8 +924,7 @@ markdown_extensions:
       custom_fences:
          - name: mermaid
            class: mermaid
-           #format: !!python/name:pymdownx.superfences.fence_code_format
-           format: !!python/name:mermaid2.fence_mermaid_custom
+           format: !!python/name:pymdownx.superfences.fence_div_format
   - pymdownx.keys
   - toc:
       permalink: true
