--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -420,8 +420,7 @@ nav:
               - Governance Responses: types/4/0415-Governance-Responses.md
               - Governance Projects: types/4/0417-Governance-Projects.md
               - Governance Controls: types/4/0420-Governance-Controls.md
-              - Governance Classification Levels: types/4/0421-Governance-Classification-Levels.md
-              - Governance Action Classifications: types/4/0422-Governance-Action-Classifications.md
+              - Governed Data Classifications: types/4/0422-Governed-Data-Classifications.md
               - Security Definitions: types/4/0423-Security-Definitions.md
               - Governance Zones: types/4/0424-Governance-Zones.md
               - Subject Areas: types/4/0425-Subject-Areas.md
