--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -698,6 +698,9 @@ nav:
       - Contact Method: concepts/contact-method.md
       - Context Event: concepts/context-event.md
       - Data Class: concepts/data-class.md
+      - Data Dictionary: concepts/data-dictionary.md
+      - Data Field: concepts/data-field.md
+      - Data Specification: concepts/data-specification.md
       - Data Domain: concepts/subject-area.md
       - Deployed Implementation Type: concepts/deployed-implementation-type.md
       - Digital Product: concepts/digital-product.md
