--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -699,6 +699,7 @@ nav:
       - Data Dictionary: concepts/data-dictionary.md
       - Data Field: concepts/data-field.md
       - Data Specification: concepts/data-specification.md
+      - Data Structure: concepts/data-structure.md
       - Data Domain: concepts/subject-area.md
       - Deployed Implementation Type: concepts/deployed-implementation-type.md
       - Digital Product: concepts/digital-product.md
